--- a/eda_second.ipynb
+++ b/eda_second.ipynb
@@ -208,7 +208,7 @@
       " 10  weather_uv_index       5356 non-null   float64\n",
       " 11  weather_pressure       5356 non-null   float64\n",
       "dtypes: float64(7), int64(3), object(2)\n",
-      "memory usage: 502.2+ KB\n"
+      "memory usage: 502.3+ KB\n"
      ]
     }
    ],
@@ -444,7 +444,7 @@
       " 10  weather_uv_index       5356 non-null   float64       \n",
       " 11  weather_pressure       5356 non-null   float64       \n",
       "dtypes: datetime64[ns](2), float64(7), int64(3)\n",
-      "memory usage: 502.2 KB\n"
+      "memory usage: 502.3 KB\n"
      ]
     }
    ],
@@ -2433,7 +2433,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\nikla\\AppData\\Local\\Temp\\ipykernel_11192\\197430006.py:1: FutureWarning: DataFrame.mean and DataFrame.median with numeric_only=None will include datetime64 and datetime64tz columns in a future version.\n",
+      "C:\\Users\\nikla\\AppData\\Local\\Temp\\ipykernel_16452\\197430006.py:1: FutureWarning: DataFrame.mean and DataFrame.median with numeric_only=None will include datetime64 and datetime64tz columns in a future version.\n",
       "  df = df.fillna(df.mean())\n"
      ]
     },
@@ -2614,19 +2614,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['linear_regression_model.joblib']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pickle\n",
-    "# Save the model to a file\n",
-    "with open('linear_regression_model.pkl', 'wb') as file:\n",
-    "    pickle.dump(model, file)\n"
+    "import joblib\n",
+    "joblib.dump(model, 'linear_regression_model.joblib')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2669,7 +2678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2678,16 +2687,16 @@
      "text": [
       "Actual: \n",
       " weather_precipitation     0.000000\n",
-      "weather_temperature      23.333333\n",
-      "weather_humidity         25.166667\n",
+      "weather_temperature      22.166667\n",
+      "weather_humidity         29.500000\n",
       "weather_uv_index          6.000000\n",
-      "Name: 409, dtype: float64\n",
+      "Name: 383, dtype: float64\n",
       "\n",
       "\n",
-      "Actual: -0.4002 (Hum% / hour)\n",
+      "Actual: -0.6788 (Hum% / hour)\n",
       "\n",
       "\n",
-      "Predicted: -0.5570 (Hum% / hour)\n"
+      "Predicted: -0.5321 (Hum% / hour)\n"
      ]
     }
    ],
@@ -2717,7 +2726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
